# printer

./: QtTCP文件传输.md
LabPrintClinet/LabPrintClinet/: LabPrintClinet.pro  LabPrintClinet.pro.user.479d0a7  LabPrintClinet.pro.user.b3d04a2  Makefile  Makefile.Debug  Makefile.Release  ui_fileprogress.h  ui_widget.h  widget.cpp  widget.h  widget.ui
LabPrintClinet/LabPrintClinet/config/: config.json
LabPrintClinet/LabPrintClinet/debug/: moc_fileprogress.cpp
LabPrintClinet/build-LabPrintClinet-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
LabPrintServer/LabPrintServer/: LabPrintServer.pro  LabPrintServer.pro.user.479d0a7  LabPrintServer.pro.user.b3d04a2  Makefile  Makefile.Debug  Makefile.Release  main.cpp  ui_widget.h  widget.cpp  widget.h  widget.ui  �
LabPrintServer/build-LabPrintServer-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
LabPrintServer/build-LabPrintServer-Desktop_Qt_5_14_2_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
clinet/: CMakeLists.txt  main.cpp
clinet/clinet/: CMakeLists.txt  client.cpp  client.h  config.cpp  config.h
clinet/data/: CMakeLists.txt  Data.h  encodedecode.cpp  encodedecode.h
clinet/ui/: CMakeLists.txt  fileprogress.cpp  fileprogress.h  widget.cpp  widget.h
server/: CMakeLists.txt  main.cpp
server/config/: config.json
server/data/: CMakeLists.txt  Data.cpp
server/server/: CMakeLists.txt  config.cpp  config.h  server.cpp  server.h
server/service/: CMakeLists.txt  service.cpp  service.h
(+24 files in other folders)
